hphp/test/zend/good/ext/standard/tests/general_functions/proc_nice_variation2.php.skipif
<?php
<<__EntryPoint>> function main() {
if(!function_exists('proc_nice')) die("skip. proc_nice not available ");
}
