hphp/test/zend/bad/ext/standard/tests/general_functions/proc_nice_error.php.skipif
<?php
if(!function_exists('proc_nice')) die("skip. proc_nice not available ");
?>